# Cargo.toml
[package]
name = "your_package_name" # Replace with your actual package name
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["server"] } # Enable the server feature
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }